fix horizontal scroll and fix bubles animation

--- a/assets/styles/sass/animations.scss
+++ b/assets/styles/sass/animations.scss
@@ -2,133 +2,111 @@
 
 @keyframes move-bubble-1 {
     0% {
-        top: -40px;
-        right: -40px;
+        transform: translate(0, 0);
     }
     100% {
-        top: -30px;
-        right: -30px;
+        transform: translate(-10px, 10px);
     }
 }
 
 
 @keyframes move-bubble-2 {
     0% {
-        top: 40px;
-        left: 40px;
+        transform: translate(0, 0);
     }
     100% {
-        top: 50px;
-        left: 50px;
+        transform: translate(-15px, -15px);
     }
 }
 
 
 @keyframes move-bubble-3 {
     0% {
-        left: 80px;
-		bottom: 40px;
+        transform: translate(0, 0);
     }
     100% {
-        left: 70px;
-		bottom: 70px;
+        transform: translate(-10px, -30px);
     }
 }
 
 @keyframes move-bubble-4 {
     0% {
-        left: -60px;
-		bottom: 40%;
+        transform: translate(0, 0);
     }
     100% {
-        left: -70px;
-        bottom: 40%;
+        transform: translate(-10px, 0);
     }
 }
 
 @keyframes move-bubble-5 {
     0% {
-        left: -50px;
-		bottom: 50%;
+        transform: translate(0, 0);
     }
     100% {
-        left: -50px;
-        bottom: 60%;
+        transform: translate(0, 200%);
     }
 }
 
 @keyframes move-bubble-6 {
     0% {
-        left: 50%;
-		bottom: -200px;
+        transform: translate(0, 0);
     }
     100% {
-        left: 50%;
-        bottom: -210px;
+        transform: translate(0, -20px);
     }
 }
 
 @keyframes move-bubble-7 {
     0% {
-        left: -100px;
-		bottom: -270px;
+        transform: translate(0, 0);
     }
     100% {
-        left: -105px;
-        bottom: -275px;
+        transform: translate(5px, -10px);
     }
 }
 
 @keyframes move-bubble-8 {
     0% {
-        right: -50px;
-		bottom: -300px;
+        transform: translate(0, 0);
     }
     100% {
-        right: -55px;
-		bottom: -305px;
+        transform: translate(10px, 15px);
     }
 }
 
 @keyframes move-bubble-9 {
     0% {
-        left: -440px;
+        transform: translate(0, 0);
     }
     100% {
-        left: -460px;
+        transform: translate(-20px, 0);
     }
 }
 
 @keyframes move-bubble-10 {
     0% {
-        top: -90px;
-        right: -20px;
+        transform: translate(0, 0);
     }
     100% {
-        top: -80px;
-        right: -10px;
+        transform: translate(-10px, 10px);
     }
 }
 
 @keyframes move-bubble-11 {
     0% {
-        top: -150px;
-        right: -400px;
+        transform: translate(0, 0);
     }
     100% {
-        top: -160px;
-        right: -410px;
+        transform: translate(20px, -20px);
     }
 }
 
 @keyframes move-bubble-12 {
     0% {
-        bottom: -300px;
-        right: 0px;
+        transform: translate(0, 0);
     }
     100% {
-        bottom: -310px;
-        right: -10px;
+        transform: translate(30px, 30px);
     }
 }
 
