--- a/assets/styles/sass/basic.scss
+++ b/assets/styles/sass/basic.scss
@@ -15,6 +15,10 @@
 	z-index: 2;
 }
 
+.page-wrapper {
+	overflow: hidden;
+}
+
 
 /* Разделы */
 .section {
