--- a/assets/styles/sass/variables.scss
+++ b/assets/styles/sass/variables.scss
@@ -1,5 +1,6 @@
 /* Цвета */
 $black: #111;
+$gray: #a3a3a3;
 $white: #fff;
 $yellow: #f9ca46;
 $orange: #f1995d;
